--- a/css/login.css
+++ b/css/login.css
@@ -5,11 +5,10 @@
 }
 body {
   background-image: url("/images/fondo.jpg");
-  background-size: cover; /* Ajusta la imagen para cubrir todo el cuerpo */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
-  background-attachment: fixed; /* Fija la imagen de fondo para que no se desplace con el contenido */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
-
 .iniciar__sesion {
   background-color: rgba(0, 0, 0, 0.229);
   border-radius: 7px;
@@ -23,6 +22,9 @@ body {
   max-width: 50%;
   margin-top: 2rem;
 }
+h2 {
+  margin: 1.5rem;
+}
 #loginForm {
   display: flex;
   flex-direction: column;
@@ -32,16 +34,13 @@ body {
   align-content: center;
   margin-bottom: 1rem;
 }
-
 .login__registro {
   padding: 1rem;
   text-align: center;
 }
-
 p {
   margin: 0;
 }
-
 h5 {
   display: flex;
   flex-direction: column;
